@@ -1,3 +1,10 @@
+2007-06-08  Timothee Lecomte <timothee.lecomte@ens.fr>
+
+	* src/wxterminal/wxt_gui.cpp (wxt_close_terminal_window): Send a
+	"Close event" to the event loop instead of using the default method
+	which doesn't work immediately with a threaded event loop. "set term
+	wxt close" now works without delay.
+
 2007-06-08  Ethan Merritt  <merritt@u.washington.edu>
 
 	* src/mouse.c (do_event): Explicitly ignore mouse clicks from windows
